Added basic scoreboard for game.

--- a/index.html
+++ b/index.html
@@ -1,20 +1,41 @@
 <!DOCTYPE html>
 
 <html lang="en-us">
+
 <head>
-<meta charset="utf-8">
-<title>Word Guess</title>
-<meta name="description" content="The HTML5 Herald">
-<meta name="author" content="SitePoint">
-<!-- Reset Stylesheet-->
-<link rel="stylesheet" href="assets/css/reset.css">
-<!-- Custom Sytlesheet-->
-<link rel="stylesheet" href="assets/css/style.css">
-<!-- JS code for our game-->
-<script src="assets/javascript/game.js"></script>
+
+    <meta charset="utf-8">
+    <title>Word Guess</title>
+    <meta name="description" content="The HTML5 Herald">
+    <meta name="author" content="SitePoint">
+    <!-- Reset Stylesheet-->
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <!-- Custom Sytlesheet-->
+    <link rel="stylesheet" href="assets/css/style.css">
+    <!-- JS code for our game-->
+    <script src="assets/javascript/game.js"></script>
+
 </head>
 
 <body>
-<h1>Hellow World!</h1>
+    <header>
+        <h1>Hangman</h1>
+    </header>
+
+    <div class="Scoreboard">
+        <div id="HumanCard" class="PlayerCard">User</div>
+        </div>
+        <div id="ComputerCard" class="PlayerCard">Computer</div>
+        </div>
+        <span id="HumanScore">0</span>
+        <span> : </span>
+        <span id="ComputerScore">0</span>
+    </div>
+
+    <div class="Result">
+
+    </div>
+
 </body>
+
 </html>
