Added scorekeeping information into the javascript.

--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
         <span id="ComputerScore">0</span>
     </div>
 
-    <div class="Result">
-
+    <div class="Game">
+        <div id="WordToGuess"></div>
+        <div id="GuessedLetters"></div>
     </div>
+
+    
 
 </body>
 
